# open-filter-challange

./: README.md  pyproject.toml  setup.py
.github/workflows/: run-pipeline.yaml  run-pipeline.yml
ocr-filter/: .coverage.MacBook-Pro.local.68213.XSiRBHqx  Makefile  benchmark_results.csv  pipeline_runner.py  pyproject.toml  requirements.txt
ocr-filter/filter_hello_ocr/: pipeline_runner.py
ocr-filter/filter_hello_ocr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ocr-filter/tests/: test_integration.py  test_main.py  test_pipeline_runner.py
ocr-filter/tests/unit/: test_sample.py
openfilter/: .gitignore  pyproject.toml
openfilter/examples/hello-ocr/: requirements.txt
openfilter/examples/hello-ocr/test/integration/tests/: test_pipeline.py
openfilter/examples/hello-world/: benchmark_results.csv  pipeline_runner.py
openfilter/examples/hello-world/test/integration/features/: integration_failure.feature  performance.feature
openfilter/examples/hello-world/test/integration/steps/: steps.py
openfilter/examples/hello-world/test/integration/tests/: test_pipeline.py
openfilter/examples/openfilter-heroku-demo/: requirements.txt
